model Event {
  id              Int           @id @default(autoincrement())
  name           String
  description     String?          
  startDate       DateTime
  endDate         DateTime
  allDay          Boolean          @default(false)
  color           String?          
  
  recurrenceId    Int?
  recurrence      EventRecurrence?       @relation(fields: [recurrenceId], references: [id], onDelete: Cascade)
  
  userId          Int    
  user            User             @relation(fields: [userId], references: [id])
  
  categoryId      Int
  category        EventCategory   @relation(fields: [categoryId], references: [id], onDelete: Cascade)
  
  reminderMinutes Int?
  
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt

  @@index([userId])
  @@index([startDate]) 
}

model EventRecurrence {
  id              Int           @id @default(autoincrement())
  type            RecurrenceType   
  interval        Int              @default(1) 
  
  daysOfWeek      String?
  
  dayOfMonth      Int?
  
  weekOfMonth     Int?             
  dayOfWeek       Int?             
  
  endDate         DateTime?        
  endCount        Int?             

  events          Event[]

  userId          Int
  user            User      @relation(fields: [userId], references: [id])
  
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt
}

enum RecurrenceType {
  DAILY
  WEEKLY
  MONTHLY
  YEARLY
}

model EventCategory {
  id          Int           @id @default(autoincrement())
  name        String
  color       String 

  userId      Int    
  user        User      @relation(fields: [userId], references: [id])

  events      Event[]

  @@unique([name, userId]) 
  @@index([userId])
}