model ExpenseCategory {
  id             String          @id @default(uuid())
  userId         Int
  name           String
  description    String?
  color          String
  expenses       Expense[]
  user           User            @relation(fields: [userId], references: [id])
  monthlyTargets MonthlyTarget[]
}

model MonthlyTarget {
  id         String          @id @default(uuid())
  categoryId String
  month      Int
  year       Int
  target     Float
  category   ExpenseCategory @relation(fields: [categoryId], references: [id])
}

model Expense {
  id                String          @id @default(uuid())
  userId            Int
  categoryId        String
  name              String
  description       String?
  amount            Float
  bankTransactionId Int
  createdAt         DateTime        @default(now())
  bankTransaction   BankTransaction @relation(fields: [bankTransactionId], references: [id])
  category          ExpenseCategory @relation(fields: [categoryId], references: [id])
  user              User            @relation(fields: [userId], references: [id])
}
